--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -31,6 +31,16 @@
   <table>
 
  <tr>
+      <td><em>05/19/2025</em></td>
+      <td>The <u>Pend Oreille Wampus Cats</u> trade <strong>P Trevor Rogers</strong> and their <strong>2026 3rd round pick</strong> to the <u>Silverville Rippers</u> in exchange for <strong>P Spencer Arrighetti</strong>. </td>
+    </tr> 
+
+     <tr>
+      <td><em>05/18/2025</em></td>
+      <td>The <u>Pend Oreille Wampus Cats</u> trade <strong>P Kumar Rocker</strong> and <strong>P Prelander Berroa</strong> to the <u>Springfield Schnauzers</u> in exchange for <strong>P Justin Martinez</strong> and <strong>2B Nolan Gorman</strong>. </td>
+    </tr> 
+    
+ <tr>
       <td><em>01/22/2025</em></td>
       <td>The <u>Pend Oreille Wampus Cats</u> trade <strong>2B Brendan Rodgers</strong> to the <u>Damascus Reapers</u> in exchange for <strong>2B Ronny Mauricio</strong> and the <strong>2026 Damascus 4th round pick </strong>. </td>
     </tr> 
