--- a/AlumniCats.html
+++ b/AlumniCats.html
@@ -30,10 +30,23 @@
   <br>
 
 
+ <table>
+    <tr>
+       <td><img src="https://www.baseball-reference.com/req/202505151/images/headshots/c/c17cdf0e_mlbam.jpg" alt=""></td>
+      <td>Trevor Rogers 2023-2025</td>
+
+       <td><img src="https://www.baseball-reference.com/req/202505151/images/headshots/3/30fda6b2_mlbam.jpg" alt=""></td>
+      <td>Kumar Rocker 2025</td>
+
+ </table>
+  
 
 
     <table>
     <tr>
+  <td><img src="https://www.baseball-reference.com/req/202505151/images/headshots/7/72b73dd7_mlbam.jpg" alt=""></td>
+      <td>Prelander Berroa 2024-2025</td>
+      
         <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/4/42abe3dc_mlbam.jpg" alt=""></td>
       <td>Brendan Rodgers 2023-25</td>
 
