--- a/AlumniCats.html
+++ b/AlumniCats.html
@@ -388,8 +388,8 @@
             OF Hunter Renfroe (Traded)<br>
             OF Phil Gosselin (Cut)<br>
             OF Corey Dickerson (Traded)<br>
-            OF Cody Bellinger - Active Roster<br>
-            OF Tyrone Taylor - Active Roster<br>
+      <strong>    OF Cody Bellinger - Active Roster<br>
+            OF Tyrone Taylor - Active Roster<br></strong>  
             OF Josh Reddick (Cut)<br>
             SS Luke Williams (Cut)</p>
         </div>
@@ -415,7 +415,7 @@
             RP John Curtiss (Cut)<br>
             RP Matt Foster (Cut)<br>
             RP Enyel De Los Santos (Traded)<br>
-            RP Ryan Thompson - Active Roster<br>
+           <strong> RP Ryan Thompson - Active Roster</strong><br>
             RP Marcos Diplan (Cut)<br>
             RP Adonis Medina (Cut)</p>
         </div>
