--- a/AlumniCats.html
+++ b/AlumniCats.html
@@ -364,8 +364,11 @@
   <br>
   <h1><strong>The Original 46</strong></h1>
   <hr>
- The team inherited from the Philly Cheesesteaks
+ The team inherited from the Philly Cheesesteaks (Bruce Barrish)
   <br>
+
+ <href="cheesesteaks.png">
+  
  <div class="container">
         <div class="column">
             <h3>Batters</h3>
