--- a/AlumniCats.html
+++ b/AlumniCats.html
@@ -367,7 +367,7 @@
  The team inherited from the Philly Cheesesteaks (Bruce Barrish)
   <br>
 
- <href="cheesesteaks.png">
+ <src="cheesesteaks.png">
   
  <div class="container">
         <div class="column">
