--- a/AlumniCats.html
+++ b/AlumniCats.html
@@ -367,7 +367,7 @@
  The team inherited from the Philly Cheesesteaks (Bruce Barrish)
   <br>
 
- <src="cheesesteaks.png">
+  <img src="Cheesesteaks.png" alt="" height="75" width="75">
   
  <div class="container">
         <div class="column">
