--- a/AlumniCats.html
+++ b/AlumniCats.html
@@ -32,7 +32,13 @@
 
  <table>
     <tr>
-       <td><img src="https://www.baseball-reference.com/req/202505151/images/headshots/c/c17cdf0e_mlbam.jpg" alt=""></td>
+       <td><img src="https://www.baseball-reference.com/req/202505151/images/headshots/2/24b6bbe3_mlbam.jpg" alt=""></td>
+      <td>Zebby Matthews 2025</td>
+
+       <td><img src="https://www.baseball-reference.com/req/202505151/images/headshots/a/a638a9f2_mlbam.jpg" alt=""></td>
+      <td>Marco Luciano 2025</td>
+      
+      <td><img src="https://www.baseball-reference.com/req/202505151/images/headshots/c/c17cdf0e_mlbam.jpg" alt=""></td>
       <td>Trevor Rogers 2023-2025</td>
 
        <td><img src="https://www.baseball-reference.com/req/202505151/images/headshots/3/30fda6b2_mlbam.jpg" alt=""></td>
