--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -31,7 +31,12 @@
   <table>
 
  <tr>
-      <td><em>05/19/2025</em></td>
+    
+     <td><em>05/26/2025</em></td>
+      <td>The <u>Pend Oreille Wampus Cats</u> trade <strong>OF Marco Luciano</strong>, <strong>P Zebby Matthews</strong> and their <strong>2026 1st & 2nd round picks</strong> to the <u>Kalamazoo Apples</u> in exchange for <strong>OF Yordan Alvarez</strong>, <strong>2B Luis Garcia Jr.</strong> and their <strong>2026 3rd round pick</strong>. </td>
+    </tr> 
+   
+   <td><em>05/19/2025</em></td>
       <td>The <u>Pend Oreille Wampus Cats</u> trade <strong>P Trevor Rogers</strong> and their <strong>2026 3rd round pick</strong> to the <u>Silverville Rippers</u> in exchange for <strong>P Spencer Arrighetti</strong>. </td>
     </tr> 
 
