--- a/AlumniCats.html
+++ b/AlumniCats.html
@@ -32,6 +32,16 @@
 
  <table>
     <tr>
+       <td><img src="https://www.baseball-reference.com/req/202505151/images/headshots/9/9ed1043f_mlbam.jpg" alt=""></td>
+      <td>Tyrone Taylor 2023-2025</td>
+
+    
+
+ </table>
+  
+
+ <table>
+    <tr>
        <td><img src="https://www.baseball-reference.com/req/202505151/images/headshots/2/24b6bbe3_mlbam.jpg" alt=""></td>
       <td>Zebby Matthews 2025</td>
 
