--- a/AlumniCats.html
+++ b/AlumniCats.html
@@ -407,8 +407,8 @@
             OF Hunter Renfroe (Traded)<br>
             OF Phil Gosselin (Cut)<br>
             OF Corey Dickerson (Traded)<br>
-      <strong>    OF Cody Bellinger - Active Roster<br>
-            OF Tyrone Taylor - Active Roster<br></strong>  
+      <strong>    OF Cody Bellinger - Active Roster<br></strong>  
+            OF Tyrone Taylor (Traded)<br>
             OF Josh Reddick (Cut)<br>
             SS Luke Williams (Cut)</p>
         </div>
