--- a/AlumniCats.html
+++ b/AlumniCats.html
@@ -31,6 +31,12 @@
 
   <h3>Former Wampus Cat players</h3>
 
+
+ <table>
+    <tr>
+       <td><img src="https://www.baseball-reference.com/req/202505151/images/headshots/f/ff778cee_mlbam.jpg" alt=""></td>
+      <td>Wade Meckler 2024-2025</td>
+  
  <table>
     <tr>
        <td><img src="https://www.baseball-reference.com/req/202505151/images/headshots/9/9ed1043f_mlbam.jpg" alt=""></td>
