--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -32,6 +32,10 @@
 
  <tr>
 
+  <td><em>05/26/2025</em></td>
+      <td>The <u>Pend Oreille Wampus Cats</u> trade <strong>OF Wade Meckler</strong> and their <strong>8th round draft pick</strong>to the <u>Washuta Lokies</u> in exchange for <strong>P Lance Lynn</strong>. </td>
+    </tr> 
+   
     <td><em>05/26/2025</em></td>
       <td>The <u>Pend Oreille Wampus Cats</u> trade <strong>OF Tyrone Taylor</strong> to the <u>Kalamazoo Apples</u> in exchange for <strong>P Marcus Stroman</strong>. </td>
     </tr> 
