--- a/AlumniCats.html
+++ b/AlumniCats.html
@@ -18,6 +18,7 @@
  
       <td><a href="TeamTransactions.html"><h3>Team Transactions</h3></a>
       <td><a href="AlumniCats.html"><h3>Alumni Cats</h3></a>
+         <td><a href="hardware.html"><h3>Hardware</h3></a>
 
       </td>
           </tr>
