--- a/hardware.html
+++ b/hardware.html
@@ -33,4 +33,12 @@
   <h3>Wampus Cats Titles</h3>
 
 
+  POWC RCL Central Trophy.png
+
+ <table>
+    <tr>
+      <td><img src="POWC RCL Central Trophy.png" alt="" height="300" width="150"></td>
+    </tr>
+ </table>
+  
 
