--- a/hardware.html
+++ b/hardware.html
@@ -37,5 +37,28 @@
       <td><img src="POWC RCL Central Trophy.png" alt="" height="500" width="350"></td>
     </tr>
  </table>
-  
 
+
+  <h3>Wampus Cats All-Stars</h3>
+
+  <table>
+    <tr>
+      <td>
+          <h4></h4>2023- <strong></strong>Aaron Judge</strong>- All-Star Outfield</h4>
+      </td>
+    </tr>
+    
+  <tr>
+      <td>
+          <h4></h4>2023- <strong></strong>Aaron Judge</strong>- Honus Wagner Award (TRABL Best Hitter)</h4>
+      </td>
+    </tr>
+
+   <tr>
+      <td>
+          <h4></h4>2024- <strong></strong>Cody Bellinger</strong>- All-Star Outfield</h4>
+      </td>
+    </tr>   
+  </table>
+
+ 
