--- a/teampitchingstats.html
+++ b/teampitchingstats.html
@@ -17,6 +17,7 @@
         <td><a href="teampitchingstats.html"><h3>Team Pitching Stats</h3></a></td>
         <td><a href="TeamTransactions.html"><h3>Team Transactions</h3></a> </td>
          <td><a href="AlumniCats.html"><h3>Alumni Cats</h3></a></td>
+         <td><a href="hardware.html"><h3>Hardware</h3></a>
             </tr>
     </table>
     <br>
@@ -537,3 +538,4 @@
 
   </body>
 </html>
+
