--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@ width="250"
 <a href="TeamTransactions.html"><h2>Team Transactions</h2> </a>
 <br>
 <a href="AlumniCats.html"><h2>Alumni Cats</h2> </a>
+<br>
+<a href="hardware.html"><h3>Hardware</h3></a>
 
 <br><br><br><br>
 <h3>Contact Jared Horton</h3>
@@ -39,3 +41,4 @@ width="250"
 
   </body>
 </html>
+
