--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
 height="250"
 width="250"
           src="Pend Oreille Wampus Cats.jpg" alt=""></td>
+
+
+   <table> <right></right>
+        <table cellspacing=20>
+      <tr>
+        <td><img
+height="250"
+width="250"
+          src="Pend Oreille Wampus Cats.jpg" alt=""></td> </right>
+        
           <td><h3>Home of the</h3></td>
           <td><h1>PEND OREILLE WAMPUS CATS</h1></td>
       </tr>
@@ -41,4 +51,5 @@ width="250"
 
   </body>
 </html>
+
 
