--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ width="250"
           src="Pend Oreille Wampus Cats.jpg" alt=""></td>
 
 
-   <table> <right></right>
+   <table> <right>
         <table cellspacing=20>
       <tr>
         <td><img
@@ -51,5 +51,6 @@ width="250"
 
   </body>
 </html>
+
 
 
