--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@ width="250"
           src="Pend Oreille Wampus Cats.jpg" alt=""></td>
 
 
-   <table> <right>
+ <right><table> 
         <table cellspacing=20>
       <tr>
         <td><img
 height="250"
 width="250"
-          src="Pend Oreille Wampus Cats.jpg" alt=""></td> </right>
+          src="POWC RCL Central Trophy.png" alt=""></td> 
+</right> 
         
           <td><h3>Home of the</h3></td>
           <td><h1>PEND OREILLE WAMPUS CATS</h1></td>
@@ -51,6 +52,7 @@ width="250"
 
   </body>
 </html>
+
 
 
 
