--- a/index.html
+++ b/index.html
@@ -17,14 +17,15 @@ width="250"
           src="Pend Oreille Wampus Cats.jpg" alt=""></td>
 
 
- <right><table> 
+ <table> 
         <table cellspacing=20>
       <tr>
         <td><img
 height="250"
 width="250"
-          src="POWC RCL Central Trophy.png" alt=""></td> 
-</right> 
+          <img align="right">
+              src="POWC RCL Central Trophy.png" alt=""></td> 
+
         
           <td><h3>Home of the</h3></td>
           <td><h1>PEND OREILLE WAMPUS CATS</h1></td>
@@ -52,6 +53,7 @@ width="250"
 
   </body>
 </html>
+
 
 
 
