--- a/hardware.html
+++ b/hardware.html
@@ -35,7 +35,7 @@
  <table>
     <tr>
       <td><img src="POWC RCL Central Trophy.png" alt="" height="500" width="350"></td>
-       <TD><IMg src="POWC RC LCS 2025.PNG" alt="" height= "500" width= "350"></TD>
+       <td><img src="POWC RC LCS 2025.png" alt="" height= "500" width= "350"></td>
     </tr>
  </table>
 
