--- a/hardware.html
+++ b/hardware.html
@@ -36,6 +36,7 @@
     <tr>
       <td><img src="POWC RCL Central Trophy.png" alt="" height="500" width="350"></td>
        <td><img src="POWC RC LCS 2025.png" alt="" height= "500" width= "350"></td>
+      <td><img src="TRABL Champion 2025.png" alt="" height= "500" width= "350"></td>
     </tr>
  </table>
 
