--- a/hardware.html
+++ b/hardware.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Hardware</title>
+  <title>Trophy Case</title>
  <link rel="icon" type="image/x-icon" href="Pend Oreille Wampus Cats.jpg">
   
 </head>
@@ -18,7 +18,7 @@
  
       <td><a href="TeamTransactions.html"><h3>Team Transactions</h3></a>
       <td><a href="AlumniCats.html"><h3>Alumni Cats</h3></a>
-     <td><a href="hardware.html"><h3>Hardware</h3></a>
+     <td><a href="hardware.html"><h3>Trophy Case</h3></a>
 
       </td>
           </tr>
@@ -26,7 +26,7 @@
   <br>
   <br>
   <br>
-  <h1><strong>Hardware</strong></h1>
+  <h1><strong>Trophy Case</strong></h1>
   <hr>
   <br>
 
