--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ width="250"
 <br>
 <a href="AlumniCats.html"><h2>Alumni Cats</h2> </a>
 <br>
-<a href="hardware.html"><h2>Hardware</h2></a>
+<a href="hardware.html"><h2>Trophy Case</h2></a>
 
 <br><br><br><br>
 <h3>Contact Jared Horton</h3>
@@ -45,6 +45,7 @@ width="250"
 
   </body>
 </html>
+
 
 
 
