--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ width="250"
         
           <td><h3>Home of the</h3></td>
           <td><h1>PEND OREILLE WAMPUS CATS</h1></td>
+        <td><h2><STRONG>REIGNING 2025 TRABL CHAMPIONS</STRONG></h2></td>
       </tr>
 </table>
 <h5><em><center>
@@ -45,6 +46,7 @@ width="250"
 
   </body>
 </html>
+
 
 
 
