--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ width="250"
        
       </tr>
           <tr>
-             <td><h2><STRONG>REIGNING 2025 TRABL CHAMPIONS</STRONG></h2></td>
+             <center><td><h2><STRONG>REIGNING 2025 TRABL CHAMPIONS</STRONG></h2></td></center>
           </tr>
 </table>
 <h5><em><center>
@@ -49,6 +49,7 @@ width="250"
 
   </body>
 </html>
+
 
 
 
