--- a/hardware.html
+++ b/hardware.html
@@ -63,4 +63,9 @@
     </tr>   
   </table>
 
- 
+   <tr>
+      <td>
+          <h4></h4>2025- <strong></strong>Yordan Alvarez</strong>- All-Star Outfield</h4>
+      </td>
+    </tr>   
+  </table>
