--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -27,6 +27,17 @@
   <hr>
   <br>
 
+ <h2><strong>2026 Season Tranactions</strong></h2> 
+
+  <table>
+
+ <tr>
+
+  <td><em>11/22/2025</em></td>
+      <td>The <u>Pend Oreille Wampus Cats</u> trade <strong>P Matthew Liberatore</strong> and their <strong>5th round pick</strong> to the <u>Silverville Rippers</u> in exchange for <strong>OF Sal Frelick</strong>. </td>
+    </tr> 
+  <br>
+    <br>
   <h2><strong>2025 Season Tranactions</strong></h2> 
 
   <table>
@@ -575,5 +586,6 @@
 </body>
 
 </html>
+
 
 
