--- a/AlumniCats.html
+++ b/AlumniCats.html
@@ -34,6 +34,10 @@
 
 
  <table>
+
+    <tr>
+       <td><img src="https://www.baseball-reference.com/req/2025011210/images/headshots/d/d0cfb4ed_mlbam.jpg" alt=""></td>
+      <td>Matthew Liberatore 2023-2025</td>
     <tr>
        <td><img src="https://www.baseball-reference.com/req/202505151/images/headshots/f/ff778cee_mlbam.jpg" alt=""></td>
       <td>Wade Meckler 2024-2025</td>
