--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -30,7 +30,13 @@
  <h2><strong>2026 Season Tranactions</strong></h2> 
 
   <table>
- <tr>
+
+     <tr>
+  <td><em>12/3/2025</em></td>
+      <td>The <u>Pend Oreille Wampus Cats</u> trade <strong>P Mitch Keller</strong> and <strong>P Will Warren</strong> to the <u>Kansas City Kaos</u> in exchange for their <strong>3rd, 4th & 5th round picks</strong>. </td>
+ </tr>
+    
+    <tr>
   <td><em>11/22/2025</em></td>
       <td>The <u>Pend Oreille Wampus Cats</u> trade <strong>P Matthew Liberatore</strong> and their <strong>5th round pick</strong> to the <u>Silverville Rippers</u> in exchange for <strong>OF Sal Frelick</strong>. </td>
  </tr>
@@ -585,6 +591,7 @@
 </body>
 
 </html>
+
 
 
 
