--- a/AlumniCats.html
+++ b/AlumniCats.html
@@ -32,10 +32,24 @@
 
   <h3>Former Wampus Cat players</h3>
 
-
  <table>
 
+
     <tr>
+       <td><img src="https://www.baseball-reference.com/req/2025011210/images/headshots/f/fbd94e66_mlbam.jpg" alt=""></td>
+      <td>Mitch Keller 2022-2025</td>
+ 
+
+    
+
+ </table>
+ <table>
+
+
+    <tr>
+       <td><img src="https://www.baseball-reference.com/req/2025011210/images/headshots/d/ddff757a_mlbam.jpg" alt=""></td>
+      <td>Will Warren 2024-2025</td>
+
        <td><img src="https://www.baseball-reference.com/req/2025011210/images/headshots/d/d0cfb4ed_mlbam.jpg" alt=""></td>
       <td>Matthew Liberatore 2023-2025</td>
     
