--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -42,7 +42,23 @@
  </tr>
   </table>
     <br>
-    <br>
+
+  <h2><strong>2026 Draft</strong></h2>
+
+<table>
+    <tr>
+      <td><strong>Round</strong></td>
+      <td><strong>Postion</strong> </td>
+      <td><strong>Name</strong> </td>
+    </tr>
+
+    <tr>
+      <td>3</td>
+      <td>OF</td>
+      <td>Jac Caglianone</td>
+    </tr>
+  
+  <br>
   <h2><strong>2025 Season Tranactions</strong></h2> 
 
   <table>
@@ -591,6 +607,7 @@
 </body>
 
 </html>
+
 
 
 
