--- a/teambattingstats.html
+++ b/teambattingstats.html
@@ -388,6 +388,14 @@
 <br>
 
 
+<h3><strong>Jac Caglianone</strong></h3>
+
+<table>
+<tr>
+  <td><img src="https://www.baseball-reference.com/req/2025011210/images/headshots/d/d69acf22_mlbam.jpg" alt=""></td>
+  <td>
+
+
     
 <h3><strong>Nolan Jones</strong></h3>
 
@@ -475,6 +483,7 @@
 
 
     
+
 
 
 
