--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -57,6 +57,24 @@
       <td>OF</td>
       <td>Jac Caglianone</td>
     </tr>
+
+<tr>
+      <td>3</td>
+      <td>2B</td>
+      <td>Christian Moore</td>
+    </tr>
+
+  <tr>
+      <td>4</td>
+      <td>P</td>
+      <td>Brandon Sproat</td>
+    </tr>
+
+  <tr>
+      <td>4</td>
+      <td>P</td>
+      <td>Matt Svanson</td>
+    </tr>
   
   <br>
   <h2><strong>2025 Season Tranactions</strong></h2> 
@@ -607,6 +625,7 @@
 </body>
 
 </html>
+
 
 
 
