--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -75,6 +75,9 @@
       <td>P</td>
       <td>Matt Svanson</td>
     </tr>
+
+</table>
+  
   
   <br>
   <h2><strong>2025 Season Tranactions</strong></h2> 
@@ -135,6 +138,7 @@
       <td><em>11/20/2024</em></td>
       <td>The <u>Pend Oreille Wampus Cats</u> trade <strong>1B Andrew Vaughn</strong> to the <u>Conception Bay Dingoes</u> in exchange for <strong>P Casey Mize</strong> and their <strong>5th round pick</strong> in the 2025 draft. </td>
     </tr> 
+    
   </table>
 
 
@@ -625,6 +629,7 @@
 </body>
 
 </html>
+
 
 
 
