--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -82,6 +82,12 @@
       <td>Mick Abel</td>
     </tr>
 
+  <tr>
+      <td>6</td>
+      <td>SS</td>
+      <td>Denzer Guzman</td>
+    </tr>
+  
 </table>
   
   
@@ -635,6 +641,7 @@
 </body>
 
 </html>
+
 
 
 
