--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -87,6 +87,12 @@
       <td>SS</td>
       <td>Denzer Guzman</td>
     </tr>
+
+   <tr>
+      <td>6</td>
+      <td>P</td>
+      <td>Bradgley Rodriguez</td>
+    </tr>
   
 </table>
   
@@ -641,6 +647,7 @@
 </body>
 
 </html>
+
 
 
 
