--- a/teampitchingstats.html
+++ b/teampitchingstats.html
@@ -534,7 +534,7 @@
 
           <table>
             <tr>
-              <td>https://www.baseball-reference.com/req/2025011210/images/headshots/b/b5f8b061_mlbam.jpg</td>
+              <td><img src="https://www.baseball-reference.com/req/2025011210/images/headshots/b/b5f8b061_mlbam.jpg" alt=""></td>
               <td>
 
 <div class="sr_share_wrap" style="overflow:auto">
@@ -548,6 +548,7 @@
    
   </body>
 </html>
+
 
 
 
