--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -32,6 +32,17 @@
   <table>
 
      <tr>
+  <td><em>1/31/2026</em></td>
+      <td>The <u>Pend Oreille Wampus Cats</u> add <strong>SS Nasim Nunez</strong> and drop <strong>P Gregory Santos</strong> in the Phase III draft. </td>
+ </tr>
+
+         <tr>
+  <td><em>1/25/2026</em></td>
+      <td>The <u>Pend Oreille Wampus Cats</u> Cut <strong>P Jairo Iriarte</strong>, <strong>P Lance Lynn</strong>, <strong>OF Taylor Trammell</strong>, and <strong>OF Joshua Palacios</strong>. </td>
+ </tr>
+    
+
+     <tr>
   <td><em>12/3/2025</em></td>
       <td>The <u>Pend Oreille Wampus Cats</u> trade <strong>P Mitch Keller</strong> and <strong>P Will Warren</strong> to the <u>Kansas City Kaos</u> in exchange for their <strong>3rd, 4th & 5th round picks</strong>. </td>
  </tr>
@@ -647,6 +658,7 @@
 </body>
 
 </html>
+
 
 
 
