--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -38,7 +38,7 @@
 
          <tr>
   <td><em>1/25/2026</em></td>
-      <td>The <u>Pend Oreille Wampus Cats</u> Cut <strong>P Jairo Iriarte</strong>, <strong>P Lance Lynn</strong>, <strong>OF Taylor Trammell</strong>, and <strong>OF Joshua Palacios</strong>. </td>
+      <td>The <u>Pend Oreille Wampus Cats</u> Cut <strong>P Jairo Iriarte</strong>, <strong>P Lance Lynn</strong>, <strong>OF Dairon Blanco</strong>, <strong>OF Taylor Trammell</strong>, and <strong>OF Joshua Palacios</strong>. </td>
  </tr>
     
 
@@ -658,6 +658,7 @@
 </body>
 
 </html>
+
 
 
 
